# kedro-llm-evaluate

./: .gitignore  README.md  pyproject.toml
kedro_llm_evaluate/: hooks.py
kedro_llm_evaluate/evaluators/: base.py
kedro_llm_evaluate/evaluators/opik/: Dockerfile  opik_evaluator.py
kedro_llm_evaluate/launchers/: cli.py
kedro_llm_evaluate/tracing/: __init__.py  context_manager.py  decorators.py  logger.py
kedro_llm_evaluate/utils/: config_registry.py  factory.py
tests/blog-summarizer/: README.md  pyproject.toml  requirements.txt
tests/blog-summarizer/conf/: logging.yml
tests/blog-summarizer/conf/base/: catalog.yml  parameters_evaluation.yml
tests/blog-summarizer/docs/source/: conf.py  index.rst
tests/blog-summarizer/src/blog_summarizer/: __init__.py  __main__.py  settings.py
tests/blog-summarizer/src/blog_summarizer/pipelines/summarize/: nodes.py  pipeline.py
